# clawfox

./: .gitignore  README.md  pyproject.toml
clawfox/: __init__.py  __main__.py  _client.py  _content.py  _daemon.py  _paths.py
docs/: clawfox-design.md
