[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clawfox"
version = "0.1.0"
description = "CLI headless browser (Playwright)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "markdownify>=0.11.0",
]

[project.scripts]
clawfox = "clawfox.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
